# gtk_phosh_test

./: README.md  com.example.title_bar.json  meson.build
_setupdoc/: buildit.sh  setup package.txt
data/: com.example.title_bar.desktop  meson.build
src/: main.py  meson.build  title-bar.in
